--- a/RenameHierarchy/RenameHierarchy.csproj
+++ b/RenameHierarchy/RenameHierarchy.csproj
@@ -50,6 +50,9 @@
     <Reference Include="AlphaFS">
       <HintPath>Resources\AlphaFS.dll</HintPath>
     </Reference>
+    <Reference Include="LiteDB">
+      <HintPath>Resources\LiteDB.dll</HintPath>
+    </Reference>
   </ItemGroup>
   <ItemGroup>
     <Compile Include="AboutForm.cs" />
@@ -64,12 +67,14 @@
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="SettingsData.cs" />
     <Compile Include="Shared.cs" />
+    <Compile Include="RenameData.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="app.config" />
     <None Include="Resources\publicdomain.is_7-8-vista-xp.ico" />
     <None Include="Resources\rename-27285_640x640.ico" />
     <None Include="Resources\AlphaFS.dll" />
+    <None Include="Resources\LiteDB.dll" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="Resources" />
